/***********************************************************************
X3 ChangeLog

2007-04-07  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* ChangeLog: Email update.

2007-04-07  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/AUTHORS: Email update, mostly for CIA commit testing.

2007-04-07  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/helpfile.c: Added colour support $k.

2007-03-20  Alex Schumann  <rubin@afternet.org>

        * src/nickserv.c: ButtaS2sLore sent in this patch to fix the default
	style when registering new users.

2007-03-20  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: applied patch from playa which fixes the nickname
	valid checks when registering a nick.

2007-03-20  Alex Schumann  <rubin@afternet.org>
 
        * src/nickserv.c: fix trying to do ldap when not enabled during
	cmd_register + also with cmd_unregister

2007-03-20  Alex Schumann  <rubin@afternet.org>

        * src/opserv.c: fix for stats alerts filtering

	* src/chanserv.c: dont kick lamers if they are currently exempt (+e) 

	* src/x3ldap.c: fix ldap error code to string

	* src/nickserv.c: (comment to add LOC logging)

2007-02-26  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: fix bug with LOC logic and ldap.

2007-02-13  Alex Schumann  <rubin@afternet.org>

	* src/nickserv.c: Fix bugs with ldap cookies. Fix opt_password
	warning/crash potential

2007-02-13  Alex Schumann  <rubin@afternet.org>

	* src/x3ldap.c: Fix double-hashing of passwords when using ldap and
	resetpass cookie system. 

	* src/nickserv.c: Fix double-hashing of passwords when using ldap and
	resetpass cookie system. Fix incorrect terms in ldap email error
	message.

2007-02-12  Alex Schumann  <rubin@afternet.org>

	* src/x3ldap.c: fix ldap_delete not binding first, so causing
	access denied sometimes.

2007-02-12  Alex Schumann  <rubin@afternet.org>

	* x3.conf.example: fix ldap config example so it actually works

2007-02-12  Alex Schumann  <rubin@afternet.org>
